--- a/package.json
+++ b/package.json
@@ -1,24 +1,29 @@
 {
-  "name": "keyword_extractor",
+  "name": "writing-server",
   "version": "1.0.0",
-  "description": "Extract keywords from given text",
+  "description": "",
   "main": "index.js",
   "dependencies": {
-    "mongodb": "^2.2.31",
+    "fs": "^0.0.1-security",
+    "log4js": "^1.1.1",
+    "mongodb": "^2.2.25",
     "natural": "^0.4.0",
     "pos": "^0.4.2",
-    "restify": "^4.1.1",
-    "restify-plugins": "^1.6.0",
-    "underscore": "^1.8.3"
+    "readline": "^1.3.0",
+    "restify": "^4.3.0",
+    "syllable": "^2.0.0"
   },
-  "devDependencies": {},
   "scripts": {
-    "test": "test"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "fiona",
-  "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "https://github.com/fionade/writing-server.git"
-  }
+    "url": "git+https://github.com/fionade/writing-server.git"
+  },
+  "author": "Fiona Draxler",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/fionade/writing-server/issues"
+  },
+  "homepage": "https://github.com/fionade/writing-server#readme"
 }
